syntax = "proto3";

option java_package = "cn.edu.ruc.iir.paraflow.metaserver.proto";
option java_outer_classname = "MetaProto";
option objc_class_prefix = "META";

import "status.proto";

package paraflow;

service Meta {
    rpc listDatabases(NoneType) returns (StringListType) {}
    rpc listTables(DbNameParam) returns (StringListType) {}
    rpc listColumns(DbTblParam) returns (StringListType) {}
    rpc listColumnsId(DbTblParam) returns (StringListType) {}
    rpc listColumnsDataType(DbTblParam) returns (StringListType) {}
    rpc getDatabase(DbNameParam) returns (DbParam) {}
    rpc getTable(DbTblParam) returns (TblParam) {}
    rpc getColumn(DbTblColParam) returns (ColParam) {}
    rpc getColumnName(DbTblColIdParam) returns (ColNameParam) {}
    rpc createDatabase(DbParam) returns (ResponseStatus) {}
    rpc createTable(TblParam) returns (ResponseStatus) {}
    rpc createColumn(ColListType) returns (ResponseStatus) {}
    rpc deleteDatabase(DbNameParam) returns (ResponseStatus) {}
    rpc deleteTable(DbTblParam) returns (ResponseStatus) {}
    rpc renameDatabase(RenameDbParam) returns (ResponseStatus) {}
    rpc renameTable(RenameTblParam) returns (ResponseStatus) {}
    rpc renameColumn(RenameColParam) returns (ResponseStatus) {}
    rpc createDbParam(DbParamParam) returns (ResponseStatus) {}
    rpc createTblParam(TblParamParam) returns (ResponseStatus) {}
    rpc createTblPriv(TblPrivParam) returns (ResponseStatus) {}
    rpc createBlockIndex(BlockIndexParam) returns (ResponseStatus) {}
    rpc updateBlockPath(UpdateBlockPathParam) returns (ResponseStatus) {}
    rpc createUser(UserParam) returns (ResponseStatus) {}
    rpc filterBlockIndex(FilterBlockIndexParam) returns (StringListType) {}
    rpc filterBlockIndexByFiber(FilterBlockIndexByFiberParam) returns (StringListType) {}
    rpc stopServer(NoneType) returns (NoneType) {}
}

// Models

message VerModel {
    int32 verId = 1;
}

message UserModel {
    string userName = 1;
    string userPass = 2;
    string roleName = 3;
    int64 creationTime = 4;
    int64 lastVisitTime = 5;
}

message DbModel {
    int64 dbId = 1;
    string dbName = 2;
    string locationUrl = 3;
    int64 userId = 4;
}

message TblModel {
    int64 tblId = 1;
    int64 dbId = 2;
    int64 createTime = 3;
    int64 lastAccessTime = 4;
    int64 userId = 5;
    string tblName = 6;
    int32 tblType = 7;
    int64 fiberColId = 8;
    string locationUrl = 9;
    int32 storageFormatId = 10;
    int64 funcId = 11;
}

message ColModel {
    int64 colId = 1;
    int32 colIndex = 2;
    string colName = 3;
    int64 dbId = 4;
    int64 tblId = 5;
    string colType = 6;
    string dataType = 7;
}

message DbParamModel {
    int64 dbId = 1;
    string paramKey = 2;
    string paramValue = 3;
}

message TblParamModel {
    int64 tblId = 1;
    string paramKey = 2;
    string paramValue = 3;
}

message TblPrivModel {
    int64 tblPrivId = 1;
    int64 grantTime = 2;
    int32 privType = 3;
    int64 tblId = 4;
}

message StorageFormatModel {
    int32 storageFormatId = 1;
    string compression = 2;
    string serialFormat = 3;
}

message FuncModel {
    int64 funcId = 1;
    string funcName = 2;
    bytes funcContent = 3;
}

message BlockIndex {
    int64 blockIndexId = 1;
    int64 tblId = 2;
    int64 fiberValue = 3;
    int64 timeBegin = 4;
    int64 timeEnd = 5;
    string timeZone = 6;
    string blockPath = 7;
}

// Customized types

message NoneType {

}

message StringListType {
    bool isEmpty = 1;
    repeated string str = 2;
}

message LongListType {
    repeated int64 lon = 1;
}

message ColListType {
    repeated ColParam column = 1;
}

message FiberValueType {
    int64 value = 1;
}

// Customized paremeters
message UserParam {
    string userName = 1;
    string password = 2;
    int64 createTime = 3;
    int64 lastVisitTime = 4;
}

message DbParam {
    bool isEmpty = 1;
    int64 dbId = 2;
    string dbName = 3;
    string locationUrl = 4;
    string userName = 5;
    ResponseStatus status = 6;
}

message TblParam {
    bool isEmpty = 1;
    int64 dbId = 2;
    int64 tblId = 3;
    string dbName = 4;
    string tblName = 5;
    string userName = 7;
    int64 createTime = 8;
    int64 lastAccessTime = 9;
    string locationUrl = 10;
    string storageFormatName = 11;
    int32 fiberColId = 12;
    int32 timeColId = 13;
    string funcName = 14;
    ColListType colList = 15;
}

message ColParam {
    bool isEmpty = 1;
    int32 colIndex = 2;
    string dbName = 3;
    string tblName = 4;
    string colName = 5;
    int32 colType = 6;
    string dataType = 7;
    ResponseStatus status = 8;
}



message DbNameParam {
    string database = 1;
}

message TblNameParam {
    string table = 1;
}

message ColNameParam {
    string column = 1;
}

message DbTblParam {
    DbNameParam database = 1;
    TblNameParam table = 2;
}

message DbTblColParam {
    DbNameParam database = 1;
    TblNameParam table = 2;
    ColNameParam column = 3;
}

message DbTblColIdParam {
    int64 dbId = 1;
    int64 tblId = 2;
    int64 colId = 3;
}

message RenameDbParam {
    string oldName = 1;
    string newName = 2;
}

message RenameTblParam {
    DbNameParam database = 1;
    string oldName = 2;
    string newName = 3;
}

message RenameColParam {
    DbNameParam database = 1;
    TblNameParam table = 2;
    string oldName = 3;
    string newName = 4;
}

message BlockIndexParam {
    DbNameParam database = 1;
    TblNameParam table = 2;
    FiberValueType value = 3;
    int64 timeBegin = 4;
    int64 timeEnd = 5;
    string timeZone = 6;
    string blockPath = 7;
}

message UpdateBlockPathParam {
    string originPath = 1;
    string newPath = 2;
}

message FilterBlockIndexParam {
    DbNameParam database = 1;
    TblNameParam table = 2;
    int64 timeBegin = 3;
    int64 timeEnd = 4;
}

message FilterBlockIndexByFiberParam {
    DbNameParam database = 1;
    TblNameParam table = 2;
    FiberValueType value = 3;
    int64 timeBegin = 4;
    int64 timeEnd = 5;
}

message DbParamParam {
    string dbName = 1;
    string paramKey = 2;
    string paramValue = 3;
}

message TblParamParam {
    string dbName = 1;
    string tblName = 2;
    string paramKey = 3;
    string paramValue = 4;
}

message TblPrivParam {
    string dbName = 1;
    string tblName = 2;
    string userName = 3;
    int32 privType = 4;
    int64 grantTime = 5;
}
